@@ -1,3 +1,5 @@
 #!/bin/bash
 set -x #echo on
-$JAVA9_BIN/java -modulepath modulepath  -addmods de.codecentric.zipvalidator -classpath classpath/de.codecentric.legacy.addresschecker/ de.codecentric.legacy.addresschecker.api.Run $1
+java --module-path modulepath \
+     --add-modules paypal \
+     -cp classpath/paypal com.paypal.risk.addresschecker.api.Run $1
